# assignment-vi

./: .env-example  .gitignore  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 6a2307322335_initial_migration_create_file_table.py  c2c7390de7d5_description_of_changes.py
app/: main.py
app/core/: __init__.py  celery_app.py  extract_pdf.py  mcp.py  setting.py  tasks.py
app/models/: __init__.py  engine.py  file.py
app/reference/: chunker.py  ocr.py  prod.py  rag1.py  rag2.py
app/router/: pdf.py  search.py
app/schema/: file.py  pdf.py
app/utils/: query_params.py  utils.py
scratch/: test_import.py
